--- a/2-introweb/cssavanzado/assets/css/cajas.css
+++ b/2-introweb/cssavanzado/assets/css/cajas.css
@@ -1,3 +1,6 @@
+<!--
+
+
 .cuadro {
     background-color: blue;
     width: 100px;
@@ -60,3 +63,7 @@ margin: 50px 40px 30px 20px;
     background-color: blueviolet;
 margin: 50px 40px;
 }
+
+
+
+-->
